Update1 index.html
Minor changes to sizing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="WhiteBG TXTCalibri">
     <div class="W100per H150px borderNone BurgundyBG WhiteTXT">
-        <p class="Wfit Hfit marginT30 marginA TXTsize75 TXTbold">La contaminación</p>
+        <p class="Wfit Hfit marginT30 marginA TXTsize50 TXTbold">La contaminación</p>
     </div>
     <div class="W100per H20px MagentaBG"></div>
     <div class="W100per H70px borderNone DarkblueBG">
@@ -26,19 +26,19 @@
         <p class="W70per Hfit paddingT10 paddingL50 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
             :::: Qué es ::::
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingB20 marginA WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize25">
             La contaminación se define como la presencia de elementos o sustancias en un entorno en el que no deberían estar, lo que afecta el equilibrio del mismo.
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingB20 marginA marginB20 WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize25">
         Los agentes contaminantes pueden ser físicos, químicos o biológicos, pudiendo afectar distintos medios como el agua, el suelo o el aire, comprendiendo los distintos tipos de contaminación.
         </p>
         <p class="W70per Hfit paddingT10 paddingL50 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
             :::: Cómo nos afecta ::::
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingB20 marginA WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize25">
             La contaminación puede tener varias consecuencias, que no sólo afectan de forma social, si no que representan un potencial peligro para la salud o la seguridad.
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingB20 marginA WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize25">
             La propagación de enfermedades de uno de los principales peligros; los contamminantes orgánicos son focos de propagacion de múltiples enfermedades.
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingB20 marginA WhiteBG TXTsize25">
