Update2 index.html
test

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./Sizing.css">
 </head>
 <body class="WhiteBG TXTCalibri">
-    <div class="W100per H150px borderNone BurgundyBG WhiteTXT">
+    <div class="W100per H150px borderNone RedBG WhiteTXT">
         <p class="Wfit Hfit marginT30 marginA TXTsize50 TXTbold">La contaminación</p>
     </div>
     <div class="W100per H20px MagentaBG"></div>
