--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="./Sizing.css">
 </head>
 <body class="WhiteBG TXTCalibri">
-    <div class="W100per H150px borderNone RedBG WhiteTXT">
-        <p class="Wfit Hfit marginT30 marginA TXTsize50 TXTbold">La contaminación</p>
+    <div class="W100per H150px borderNone BurgundyBG WhiteTXT">
+        <p class="Wfit Hfit marginT40 marginA TXTsize50 TXTbold">La contaminación</p>
     </div>
     <div class="W100per H20px MagentaBG"></div>
     <div class="W100per H70px borderNone DarkblueBG">
@@ -26,33 +26,42 @@
         <p class="W70per Hfit paddingT10 paddingL50 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
             :::: Qué es ::::
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
             La contaminación se define como la presencia de elementos o sustancias en un entorno en el que no deberían estar, lo que afecta el equilibrio del mismo.
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize20">
         Los agentes contaminantes pueden ser físicos, químicos o biológicos, pudiendo afectar distintos medios como el agua, el suelo o el aire, comprendiendo los distintos tipos de contaminación.
         </p>
         <p class="W70per Hfit paddingT10 paddingL50 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
             :::: Cómo nos afecta ::::
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
             La contaminación puede tener varias consecuencias, que no sólo afectan de forma social, si no que representan un potencial peligro para la salud o la seguridad.
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
             La propagación de enfermedades de uno de los principales peligros; los contamminantes orgánicos son focos de propagacion de múltiples enfermedades.
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingB20 marginA WhiteBG TXTsize25">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
             La contaminación del aire también es perjudicial, pues la exposición a aire con altos niveles de contaminación puede tener efectos a largo plazo.
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingB20 marginA WhiteBG TXTsize25">
-
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize20">
+            Otra posible consecuencia de la contaminación es que se tape el drenaje, pudiendo causar inundaciones que pueden desembocar en otros problemas como accidentes automovilísticos
         </p>
 
         <p class="W70per Hfit paddingT10 paddingL50 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
-            ::::  ::::
+            :::: La contaminación en nuestra comunidad ::::
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingB10 marginA marginB20 WhiteBG TXTsize25">
-            
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
+            Nuestra comunidad ya ha tenido y tiene problemas de contaminación
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
+            Debido a escasos recorridos de los camiones recolectores y a una pobre (o nula) cultura ciudadana de la limpieza, en la delegación de Ixtapa, la cual es una de las más pobladas de Puerto Vallarta, existen tiraderos de basura, sitios en los que hay una alta concentración de contaminación.
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
+            El 24 de septiemre del 2024, ASIPONA puerto vallarta realizó una recolección de residuos en la playa Boca Negra y descurió que entre los principales contaminantes encontrados se encuentran desechos orgánicos e inorgánicos provenientes de basura doméstica y otros desechos de otras industrias.
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
+            En una investigación realizada en el 2018 y 2019 por el Centro Universitario de la Costa junto con estudiantes de la Universidad de Guadalajara, se estudió la calidad del aire de Puerto Vallarta y descubrieron que en general hay una buena calidad del aire con la excepción de lugares como Las Juntas, Coapinole y la delegación de Ixtapa, en los cuales hay focos rojos
         </p>
     </div>
 </body>
