Update4 index.html
more info added

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     </div>
     <div class="W100per H20px MagentaBG"></div>
     <div class="W100per H70px borderNone DarkblueBG">
-
     </div>
 
     <div class="W5per floatL borderNone"></div>
     <div class="W70per Hfit marginT30 floatL WhiteshadeBG TXTsize30 borderNone borderR-TL8 borderR-TR8">
-        <p class="W70per Hfit paddingT10 paddingL50 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
+        <p class="W70per Hfit paddingT10 paddingL50 paddingR20 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
             :::: Qué es ::::
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
@@ -32,7 +31,7 @@
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize20">
         Los agentes contaminantes pueden ser físicos, químicos o biológicos, pudiendo afectar distintos medios como el agua, el suelo o el aire, comprendiendo los distintos tipos de contaminación.
         </p>
-        <p class="W70per Hfit paddingT10 paddingL50 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
+        <p class="W70per Hfit paddingT10 paddingL50 paddingR20 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
             :::: Cómo nos afecta ::::
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
@@ -48,7 +47,7 @@
             Otra posible consecuencia de la contaminación es que se tape el drenaje, pudiendo causar inundaciones que pueden desembocar en otros problemas como accidentes automovilísticos
         </p>
 
-        <p class="W70per Hfit paddingT10 paddingL50 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
+        <p class="W70per Hfit paddingT10 paddingL50 paddingR20 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
             :::: La contaminación en nuestra comunidad ::::
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
@@ -58,11 +57,37 @@
             Debido a escasos recorridos de los camiones recolectores y a una pobre (o nula) cultura ciudadana de la limpieza, en la delegación de Ixtapa, la cual es una de las más pobladas de Puerto Vallarta, existen tiraderos de basura, sitios en los que hay una alta concentración de contaminación.
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
-            El 24 de septiemre del 2024, ASIPONA puerto vallarta realizó una recolección de residuos en la playa Boca Negra y descurió que entre los principales contaminantes encontrados se encuentran desechos orgánicos e inorgánicos provenientes de basura doméstica y otros desechos de otras industrias.
+            El 24 de septiembre del 2024, ASIPONA puerto vallarta realizó una recolección de residuos en la playa Boca Negra y descurió que entre los principales contaminantes encontrados se encuentran desechos orgánicos e inorgánicos provenientes de basura doméstica y otros desechos de otras industrias.
         </p>
-        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize20">
             En una investigación realizada en el 2018 y 2019 por el Centro Universitario de la Costa junto con estudiantes de la Universidad de Guadalajara, se estudió la calidad del aire de Puerto Vallarta y descubrieron que en general hay una buena calidad del aire con la excepción de lugares como Las Juntas, Coapinole y la delegación de Ixtapa, en los cuales hay focos rojos
         </p>
+        <p class="W70per Hfit paddingT10 paddingL50 paddingR20 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
+            :::: Lo que podemos hacer ::::
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
+            Lo que podemos hacer para ayudar a resolver este problema en nuestra comunidad consiste en:
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
+            &sstarf; Evitar generar más basura deshaciendonos de nuestros desechos de forma apropiada evitando por ejemplo tirar basura en la calle
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize20">
+            &sstarf; Evitar usar medios contaminantes en medida de lo posible
+        </p>
+            <p class="W70per Hfit paddingT10 paddingL50 paddingR20 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
+            :::: Fuentes ::::
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20" :hover onclick="window.open('https://www.noticiaspv.com.mx/ixtapa-corredor-de-basura/')">
+            https://www.noticiaspv.com.mx/ixtapa-corredor-de-basura/
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20" :hover onclick="window.open('https://puertodevallarta.com.mx/noticias/373-limpieza-de-playas-asipona-puerto-vallarta#:~:text=Entre%20los%20principales%20contaminantes%20se,desechos%20provenientes%20de%20distintas%20industrias')">
+            https://puertodevallarta.com.mx/noticias/373-limpieza-de-playas-asipona-puerto-vallarta#:~:text=Entre%20los%20principales%20contaminantes%20se,desechos%20provenientes%20de%20distintas%20industrias
+        </p>
+        <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize20" :hover onclick="window.open('https://tribunadelabahia.com.mx/juntas-y-coapinole-mas-contaminado-45637/')">
+            https://tribunadelabahia.com.mx/juntas-y-coapinole-mas-contaminado-45637/
+        </p>
+    </div>
+    <div class="W100per H70px borderNone floatNone DarkblueBG">
     </div>
 </body>
 </html>
