Update6 index.html
small fixes

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
             :::: Fuentes ::::
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20" :hover onclick="window.open('https://www.noticiaspv.com.mx/ixtapa-corredor-de-basura/')">
-            https://www.noticiaspv.com.mx/ixtapa-corredor-de-basura/
+            https://www.noticiaspv.com.mx /ixtapa-corredor-de-basura/
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20" :hover onclick="window.open('https://puertodevallarta.com.mx/noticias/373-limpieza-de-playas-asipona-puerto-vallarta#:~:text=Entre%20los%20principales%20contaminantes%20se,desechos%20provenientes%20de%20distintas%20industrias')">
-            https://puertodevallarta.com.mx/noticias/373-limpieza-de-playas-asipona-puerto-vallarta#:~:text=Entre%20los%20principales%20contaminantes%20se,desechos %20provenientes%20de%20distintas%20industrias
+            https://puertodevallarta.com.mx /noticias/373-limpieza-de-playas- asipona-puerto-vallarta #:~:text=Entre%20los %20principales%20contaminantes %20se,desechos%20provenientes %20de%20distintas%20industrias
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize20" :hover onclick="window.open('https://tribunadelabahia.com.mx/juntas-y-coapinole-mas-contaminado-45637/')">
-            https://tribunadelabahia.com.mx/juntas-y-coapinole-mas-contaminado-45637/
+            https://tribunadelabahia.com.mx /juntas-y-coapinole-mas-contaminado- 45637/
         </p>
-    </div>
+    </div> 
     <div class="W100per H70px borderNone floatNone DarkblueBG">
     </div>
 </body>
