Update9 index.html
grammar fixes

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             La contaminación puede tener varias consecuencias, que no sólo afectan de forma social, si no que representan un potencial peligro para la salud o la seguridad.
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
-            La propagación de enfermedades de uno de los principales peligros; los contamminantes orgánicos son focos de propagacion de múltiples enfermedades.
+            La propagación de enfermedades es uno de los principales peligros; los contaminantes orgánicos son focos de propagacion de múltiples enfermedades.
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA WhiteBG TXTsize20">
-            La contaminación del aire también es perjudicial, pues la exposición a aire con altos niveles de contaminación puede tener efectos a largo plazo.
+            La contaminación del aire también es perjudicial, pues la exposición a aire con altos niveles de contaminación puede tener efectos negativos en la salud en el largo plazo.
         </p>
         <p class="W90per Hfit paddingT10 paddingL20 paddingR20 paddingB20 marginA marginB20 WhiteBG TXTsize20">
-            Otra posible consecuencia de la contaminación es que se tape el drenaje, pudiendo causar inundaciones que pueden desembocar en otros problemas como accidentes automovilísticos
+            Otra posible consecuencia de la contaminación es que se bloquee el drenaje, pudiendo causar inundaciones que pueden desembocar en otros problemas como accidentes automovilísticos
         </p>
 
         <p class="W70per Hfit paddingT10 paddingL50 paddingR20 paddingB10 marginT30 marginB20 Hfit marginT20 LightergrayBG WhiteTXT borderR-TR16 borderR-BR16">
